<?xml version="1.0"?>
<package format="3">
  <name>palletizing_interfaces</name>
  <version>0.0.1</version>
  <description>ROS2 action interfaces for palletizing operations</description>
  <maintainer email="herrtejasmurkute@gmail.com">Tejas Murkute</maintainer>
  <license>BSD-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>geometry_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
